# toybox

./: LICENSE  README.md
Hopfield_model/: CMakeLists.txt  movie.cpp
Hopfield_network/: CMakeLists.txt  Hopfield_model.hpp  README.md  README_ja.md  ezlib.hpp  interaction.cpp  memorize.cpp  movie.cpp  recall.cpp
